# WordLists

./: CMakeLists.txt  LICENSE  README.md  test.cpp
GUI/WordListsGui/: .gitignore  Button.qml  WordListsGui.pro  backend.cpp  backend.hpp  main.cpp  main.qml
UnitTest/: CMakeLists.txt  CMakeLists.txt.in  InterfaceAlgorithm.cpp  example.cpp  get_words_exception_test.cpp  interface&algorithm_test.cpp  interface_test.cpp  interface_test_for_vs.cpp  io_test.cpp  notnull.txt  text_process_test.cpp
doc/: GUI_IO_USAGE.md  Lab1-2说明文档.md  Lab1-3说明文档.md  lab01设计文档.md  test.md
src/: CMakeLists.txt  IO.cpp  IO.hpp  algorithm.cpp  algorithm.hpp  interface.cpp  interface.hpp  main.cpp  trie.cpp  trie.hpp  type.hpp
test/: a.md  test.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  test_1.txt  test_10.txt  test_2.txt  test_3.txt  test_5.txt  test_7.txt  test_8.txt  test_9.txt
